2005-10-18  Wim Taymans  <wim@fluendo.com>

	* check/Makefile.am:
	* check/clocks/selection.c: (GST_START_TEST), (volume_suite),
	(main):
	Add future test for clock selection.

2005-10-18  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_init),
	(gst_alsasink_close):
	Set handle to NULL.

	* gst-libs/gst/audio/gstringbuffer.c:
	(gst_ring_buffer_open_device), (gst_ring_buffer_close_device),
	(gst_ring_buffer_acquire), (gst_ring_buffer_release),
	(gst_ring_buffer_start), (gst_ring_buffer_pause),
	(gst_ring_buffer_stop), (gst_ring_buffer_commit),
	(gst_ring_buffer_read):
	More debug info.

2005-10-17  Stefan Kost  <ensonic@users.sf.net>

	* gst/audiotestsrc/Makefile.am:
	* gst/sine/Makefile.am:
	* gst/volume/Makefile.am:
	  fix broken build of controllerized plugins

2005-10-17  Fabrizio Gennari  <fabrizio dot ge at tiscali dot it>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps):
	  Add support for Indeo-3 (IV32).

2005-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  rewrite

2005-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/video/video.c: (gst_video_get_size):
	* gst/audiotestsrc/gstaudiotestsrc.c:
	  doc updates

2005-10-17  Andy Wingo  <wingo@pobox.com>

	* ext/ogg/gstoggmux.c (gst_ogg_mux_queue_pads): Fix bug introduced
	with the collectpads change.
	(gst_ogg_mux_send_headers): Elevate warning to a g_critical.

	* gst/tcp/gstmultifdsink.c: Convert to use the boilerplate macro.

	* gst/tcp/gsttcp.c (gst_tcp_socket_read): Comment update.

	* ext/theora/theoraenc.c (theora_buffer_from_packet): Pass the
	alloc_buffer flow return to callers.
	(theora_enc_chain, theora_enc_chain): Adapt to buffer_from_packet
	change. Fix some memleaks in theoraenc.

	* ext/ogg/gstoggmux.c (gst_ogg_mux_send_headers): Fix a segfault
	in strange circumstance.
